style.css
#source-table { /* only show the source table when editing the page */
    display: none;
}

/* Class Selectors */

.inspirator {
    position: relative;
    background: #fccf2d;
    margin: 15px auto;
    padding: 10px 5px;
    width: 800px;
    overflow: hidden;
    border: 4px solid #ffb700;
    color: #444;
}

.panel-box {
    float: left;
    background: #ffffff;
    margin: 5px;
    padding: 7px 0 !important;
    width: 390px;
    height: 430px;
}

.panel-box__title {
    background: #FEE9A0;
    margin: 0 3px 5px;
    padding: 0 10px;
}

.panel-box__title h3 {
    margin: 3px;
}

.panel-box__content {
    padding: 0 20px 10px;
    height: 400px;
}

.panel-box__content h4 {
    margin: 10px 0;
    float: left;
}

.panel-box__content td {
    width: 150px;
}

.panel-box__footer {
    font-weight: lighter;
    font-style: italic;
    font-size: x-small;
    margin: 0;
    text-align: right;
}

.panel-box__range {
    width: 230px;
    margin-right: 15px;
}

.panel-box__results th {
    color: #999999;
    border: none !important;
}

.right {
    float: right;
}

.left {
    float: left;
}

.red {
    color: #ff0000;
}

/* Element Selectors */

.inspirator,
.inspirator div {
    border-radius: 10px 10px / 10px 10px;
}

.inspirator a {
    color: #14456E;
    text-decoration: none;
}

.inspirator a:hover {
    text-decoration: underline;
}

.inspirator label {
    display: inline;
    font-weight: normal;
}

.inspirator span > span,
.inspirator label:hover,
.inspirator input:hover {
    cursor: pointer;
}

.inspirator p {
    font-weight: bold;
    margin: 10px 0 !important;
}

.inspirator table {
    text-align: left;
    width: 100%;
    border: none !important;
    clear: both;
}

.inspirator td {
    border: none !important;
}

.inspirator tr.output > td:first-child {
    width: 155px;
}

.inspirator tr.output > td {
    width: 110px;
}

.inspirator tr.output > td:last-child {
    width: 75px;
}

/* Attribute Selectors */

.inspirator input[type=range]:before {
    content: attr(min);
    padding-right: 5px;
}

.inspirator input[type=range]:after {
    content: attr(max);
    padding-left: 5px;
}

